# Storage-service

./: .gitignore  Dockerfile  README.md  Technical-Architecture.md  api-spec.md  docker-compose.yml  docs.md
.github/workflows/: build_deploy.yml  test-workflow.yml  test_build_deploy.yml  testcase-workflow.yml
CIAOS-Rust/: Cargo.toml
CIAOS-Rust/client/: Flatbuffer_Store.fbs  setup.py
CIAOS-Rust/client/ciaos/: client.py  config.py  main.py  test.py
CIAOS-Rust/client/ciaos/util/Store/: FileData.py
CIAOS-Rust/client/ciaos/util/flatbuffer/: FileDataList.py  flatbuffer_handler.py
CIAOS-Rust/client/ciaos/util/flatbuffer/Store/: FileDataList.py
CIAOS-Rust/server/: Cargo.toml  Flatbuffer_Store.fbs  delete_log.json  haystack.sqlite
CIAOS-Rust/server/src/: api.rs  database.rs  main.rs  service.rs  storage.rs
CIAOS-Rust/server/src/util/: serializer.rs
CIAOS-Rust/src/: main.rs  storage.rs
RFCs/RFC1/: RFC.txt
backupforpypi/: s1_client_test-0.1.0-py3-none-any.whl
client/: setup.py
client/ciaos/: __init__.py  client.py  config.py  test.py
client/s1_client/: __init__.py  crud.py  database.py
client/s1_client_test/: client.py  crud.py
client/test/: test.py
client/tests/: test_crud.py
server/: Cargo.toml  key_generator.py  main.py  requirements.txt  server_log.yaml
server/app/crud/: crud.py
server/app/database/: database.py
server/src/: api.rs  database.rs  main.rs  service.rs  storage.rs
server/src/util/: Flatbuffer_Store_generated.rs  mod.rs
server/tests/: key_generator_test.py  test.py
server/utils/: key_generator.py
(+2 files in other folders)
