[package]
name = "CIAOS"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
bincode = "1.3.3"
bytes = "1.7.2"
env_logger = "0.11.5"
flatbuffers = "24.3.25"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
rusqlite = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
